# echo-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  mlflow.db  pyproject.toml  run.sh
app/: models.py
app/api/: main.py
app/web/: streamlit_app.py
fly_deploy/: Dockerfile  docker-compose.fly.yml  docker-compose.fly.yml.template  docker-compose.local.yml  fly.generated.toml
fly_deploy/api_service/: main.py  requirements.txt
fly_deploy/classifier_service/: Dockerfile  main.py
fly_deploy/scripts/: 01_build_push_images.sh  02_deploy_fly.sh  03_test.sh
notebooks/: evaluate.ipynb  mlflow_lora_experiments.ipynb  run_experiments.py
scripts/: ollama_start.sh
services/classifier/: Dockerfile  main.py
services/mlflow/: Dockerfile
services/orchestrator/: Dockerfile  main.py
