[project]
name = "echobot"
version = "0.0.1"
description = "Simple echo bot for HumanOrBot project."
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi[standard]>=0.115.11,<0.116.0",
    "pydantic>=2.10.6,<3.0.0",
    "streamlit==1.43.1",
    "transformers>=4.40.0,<5.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
test = [
    "requests>=2.32.3",
]

[tool.uv]
package = false
